# new_project_server

./: .gitignore
backend/: .flake8  .gitignore  .pylintrc  main.py  pyproject.toml
backend/new_project_backend/: app.py  config.py
backend/new_project_backend/api/: auth.py  book.py  daily_plan.py  deps.py  test.py  user.py  word.py
backend/new_project_backend/db/: base.py  book.py  config.py  connection.py  daily_plan.py  errors.py  user.py  word.py
backend/new_project_backend/model/: book.py  daily_plan.py  user.py  word.py
backend/new_project_backend/utils/: jwt.py  key.py
docker/: docker-mirror.txt
docker/configs/: Dockerfile
docker/configs/nginx/dev/: nginx.conf
docker/configs/nginx/prod/: nginx.conf
docker/configs/pgadmin/: pgadmin.env  servers.json
docker/dev/: docker-compose.yml
docker/prod/: docker-compose.yml
frontend/: .eslintrc.json  .gitignore  .prettierrc.json  package.json  tsconfig.json  webpack.dev.config.ts  webpack.prod.config.ts
frontend/src/: index.html  index.tsx  style.less
frontend/src/api/: Auth.ts  Book.ts  DailyPlan.ts  User.ts
frontend/src/auth/: AuthContext.tsx  AuthProvider.tsx  RequireAuth.tsx  RequireNotAuth.tsx
frontend/src/components/: Login.tsx  Plan.tsx  Plans.tsx  Register.tsx  Word.tsx
frontend/src/http/: test.ts
frontend/src/model/: Book.ts  DailyPlan.ts  OAuth2PasswordRequestForm.ts  User.ts  Word.ts
frontend/src/pages/: DailyPlansPage.tsx  LoginPage.tsx  NotFoundPage.tsx  PlansPage.tsx  RegisterPage.tsx  WordPage.tsx
frontend/src/views/: Home.tsx  NotFound.tsx  Test.tsx
