[tool.poetry]
name = "new_project_backend"
version = "0.0.1"
description = "The backend part of new_project_server"
authors = [
    "huhaichuan <huhaichuan0704@126.com>",
]

[tool.poetry.dependencies]
python = "^3.10.4"
argon2-cffi = "^21.3.0"
cryptography = "^37.0.1"
fastapi = "^0.75.2"
psycopg = {extras = ["binary", "pool"], version = "^3.0.12"}
pydantic = "^1.9.0"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
isort = "^5.10.1"
mypy = "^0.950"
mypy-extensions = "^0.4.3"
pylint = "^2.13.7"
watchdog = "^2.1.7"

[tool.poetry.scripts]
watch = "main:watch"
start = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
profile = "black"
